yarc/compiler/YarcParser.py
# $ANTLR 3.5.3 .\\yarc\\yarc\\grammar\\YarcParser.g 2023-06-04 16:05:47

import sys

import stringtemplate3
from antlr3 import (
    BaseRecognizer,
    EarlyExitException,
    FailedPredicateException,
    NoViableAltException,
    ParserRuleReturnScope,
    RecognitionException,
    RecognizerSharedState,
    Token,
)

from yarc.compiler.handlers.handler import Attribute, Handler, Parameter

if __name__ is not None and "." in __name__:
    from .YarcParserBase import YarcParserBase
else:
    from YarcParserBase import YarcParserBase


# for convenience in actions
HIDDEN = BaseRecognizer.HIDDEN

# token types
EOF = -1
AND = 4
ASSIGN = 5
AT = 6
AUG_ASSIGN = 7
AXIS = 8
BIN_DIGIT = 9
BIT_AND = 10
BIT_NOT = 11
BIT_OR = 12
CAMERA = 13
COLON = 14
COMBINE = 15
COMMA = 16
COMMENT = 17
CREATE = 18
DEDENT = 19
DIGIT = 20
DISTRIBUTION = 21
DIV = 22
DOT = 23
EDIT = 24
ELLIPSIS = 25
ELSE = 26
EQUALS = 27
EVERY = 28
EXPONENT = 29
EXPONENT_FLOAT = 30
FALSE = 31
FETCH = 32
FLOAT_NUMBER = 33
FOR = 34
FRACTION = 35
FRAMES = 36
FROM = 37
GET = 38
GROUP = 39
GT = 40
GT_EQ = 41
HEX_DIGIT = 42
ID = 43
IDIV = 44
ID_CONTINUE = 45
ID_START = 46
IF = 47
IN = 48
INDENT = 49
INSTANTIATE = 50
INTEGER = 51
INT_PART = 52
IS = 53
LBRACE = 54
LBRACK = 55
LEN = 56
LETTER = 57
LIGHT = 58
LIMIT = 59
LINE_JOINING = 60
LOOK_AT = 61
LPAREN = 62
LSHIFT = 63
LT = 64
LT_EQ = 65
MATCH = 66
MATERIAL = 67
MATERIAL_ = 68
MINUS = 69
MOD = 70
MOVE_TO_CAM = 71
MUL = 72
NESTED_CODE = 73
NEWLINE = 74
NONE = 75
NON_ZERO_DIGIT = 76
NOT = 77
NOT_EQ = 78
OCT_DIGIT = 79
ON = 80
OPEN = 81
OR = 82
ORDER = 83
PHYSICS = 84
PIVOT = 85
PLUS = 86
POINT_FLOAT = 87
POWER = 88
RANGE = 89
RBRACE = 90
RBRACK = 91
RECURSIVE = 92
ROTATE = 93
ROT_AROUND = 94
RPAREN = 95
RSHIFT = 96
SCALE = 97
SCATTER = 98
SCENARIO = 99
SEMANTICS = 100
SEMI = 101
SETTINGS = 102
SETTING_ID = 103
SHAPE = 104
SHORT_STRING = 105
SIZE = 106
SKIP_ = 107
SNIPPET = 108
SPACES = 109
STAGE = 110
STEP = 111
STEREO = 112
STRING = 113
STRING_ESCAPE_SEQ = 114
TIME = 115
TIMELINE = 116
TO = 117
TRANSLATE = 118
TRUE = 119
UNDERSCORE = 120
UNKNOWN = 121
UP_AXIS = 122
VISIBLE = 123
WRITERS = 124
XOR = 125

# token names
tokenNamesMap = {
    0: "<invalid>",
    1: "<EOR>",
    2: "<DOWN>",
    3: "<UP>",
    -1: "EOF",
    4: "AND",
    5: "ASSIGN",
    6: "AT",
    7: "AUG_ASSIGN",
    8: "AXIS",
    9: "BIN_DIGIT",
    10: "BIT_AND",
    11: "BIT_NOT",
    12: "BIT_OR",
    13: "CAMERA",
    14: "COLON",
    15: "COMBINE",
    16: "COMMA",
    17: "COMMENT",
    18: "CREATE",
    19: "DEDENT",
    20: "DIGIT",
    21: "DISTRIBUTION",
    22: "DIV",
    23: "DOT",
    24: "EDIT",
    25: "ELLIPSIS",
    26: "ELSE",
    27: "EQUALS",
    28: "EVERY",
    29: "EXPONENT",
    30: "EXPONENT_FLOAT",
    31: "FALSE",
    32: "FETCH",
    33: "FLOAT_NUMBER",
    34: "FOR",
    35: "FRACTION",
    36: "FRAMES",
    37: "FROM",
    38: "GET",
    39: "GROUP",
    40: "GT",
    41: "GT_EQ",
    42: "HEX_DIGIT",
    43: "ID",
    44: "IDIV",
    45: "ID_CONTINUE",
    46: "ID_START",
    47: "IF",
    48: "IN",
    49: "INDENT",
    50: "INSTANTIATE",
    51: "INTEGER",
    52: "INT_PART",
    53: "IS",
    54: "LBRACE",
    55: "LBRACK",
    56: "LEN",
    57: "LETTER",
    58: "LIGHT",
    59: "LIMIT",
    60: "LINE_JOINING",
    61: "LOOK_AT",
    62: "LPAREN",
    63: "LSHIFT",
    64: "LT",
    65: "LT_EQ",
    66: "MATCH",
    67: "MATERIAL",
    68: "MATERIAL_",
    69: "MINUS",
    70: "MOD",
    71: "MOVE_TO_CAM",
    72: "MUL",
    73: "NESTED_CODE",
    74: "NEWLINE",
    75: "NONE",
    76: "NON_ZERO_DIGIT",
    77: "NOT",
    78: "NOT_EQ",
    79: "OCT_DIGIT",
    80: "ON",
    81: "OPEN",
    82: "OR",
    83: "ORDER",
    84: "PHYSICS",
    85: "PIVOT",
    86: "PLUS",
    87: "POINT_FLOAT",
    88: "POWER",
    89: "RANGE",
    90: "RBRACE",
    91: "RBRACK",
    92: "RECURSIVE",
    93: "ROTATE",
    94: "ROT_AROUND",
    95: "RPAREN",
    96: "RSHIFT",
    97: "SCALE",
    98: "SCATTER",
    99: "SCENARIO",
    100: "SEMANTICS",
    101: "SEMI",
    102: "SETTINGS",
    103: "SETTING_ID",
    104: "SHAPE",
    105: "SHORT_STRING",
    106: "SIZE",
    107: "SKIP_",
    108: "SNIPPET",
    109: "SPACES",
    110: "STAGE",
    111: "STEP",
    112: "STEREO",
    113: "STRING",
    114: "STRING_ESCAPE_SEQ",
    115: "TIME",
    116: "TIMELINE",
    117: "TO",
    118: "TRANSLATE",
    119: "TRUE",
    120: "UNDERSCORE",
    121: "UNKNOWN",
    122: "UP_AXIS",
    123: "VISIBLE",
    124: "WRITERS",
    125: "XOR",
}
Token.registerTokenNamesMap(tokenNamesMap)

# token names
tokenNames = [
    "<invalid>",
    "<EOR>",
    "<DOWN>",
    "<UP>",
    "AND",
    "ASSIGN",
    "AT",
    "AUG_ASSIGN",
    "AXIS",
    "BIN_DIGIT",
    "BIT_AND",
    "BIT_NOT",
    "BIT_OR",
    "CAMERA",
    "COLON",
    "COMBINE",
    "COMMA",
    "COMMENT",
    "CREATE",
    "DEDENT",
    "DIGIT",
    "DISTRIBUTION",
    "DIV",
    "DOT",
    "EDIT",
    "ELLIPSIS",
    "ELSE",
    "EQUALS",
    "EVERY",
    "EXPONENT",
    "EXPONENT_FLOAT",
    "FALSE",
    "FETCH",
    "FLOAT_NUMBER",
    "FOR",
    "FRACTION",
    "FRAMES",
    "FROM",
    "GET",
    "GROUP",
    "GT",
    "GT_EQ",
    "HEX_DIGIT",
    "ID",
    "IDIV",
    "ID_CONTINUE",
    "ID_START",
    "IF",
    "IN",
    "INDENT",
    "INSTANTIATE",
    "INTEGER",
    "INT_PART",
    "IS",
    "LBRACE",
    "LBRACK",
    "LEN",
    "LETTER",
    "LIGHT",
    "LIMIT",
    "LINE_JOINING",
    "LOOK_AT",
    "LPAREN",
    "LSHIFT",
    "LT",
    "LT_EQ",
    "MATCH",
    "MATERIAL",
    "MATERIAL_",
    "MINUS",
    "MOD",
    "MOVE_TO_CAM",
    "MUL",
    "NESTED_CODE",
    "NEWLINE",
    "NONE",
    "NON_ZERO_DIGIT",
    "NOT",
    "NOT_EQ",
    "OCT_DIGIT",
    "ON",
    "OPEN",
    "OR",
    "ORDER",
    "PHYSICS",
    "PIVOT",
    "PLUS",
    "POINT_FLOAT",
    "POWER",
    "RANGE",
    "RBRACE",
    "RBRACK",
    "RECURSIVE",
    "ROTATE",
    "ROT_AROUND",
    "RPAREN",
    "RSHIFT",
    "SCALE",
    "SCATTER",
    "SCENARIO",
    "SEMANTICS",
    "SEMI",
    "SETTINGS",
    "SETTING_ID",
    "SHAPE",
    "SHORT_STRING",
    "SIZE",
    "SKIP_",
    "SNIPPET",
    "SPACES",
    "STAGE",
    "STEP",
    "STEREO",
    "STRING",
    "STRING_ESCAPE_SEQ",
    "TIME",
    "TIMELINE",
    "TO",
    "TRANSLATE",
    "TRUE",
    "UNDERSCORE",
    "UNKNOWN",
    "UP_AXIS",
    "VISIBLE",
    "WRITERS",
    "XOR",
]


class YarcParser(YarcParserBase):
    grammarFileName = ".\\yarc\\yarc\\grammar\\YarcParser.g"
    api_version = 1
    tokenNames = tokenNames

    def __init__(self, input, state=None, *args, **kwargs):
        if state is None:
            state = RecognizerSharedState()

        super().__init__(input, state, *args, **kwargs)

        self.delegates = []

        self.templateLib = stringtemplate3.StringTemplateGroup(
            "YarcParserTemplates", lexer="angle-bracket"
        )

    def setTemplateLib(self, templateLib):
        self.templateLib = templateLib

    def getTemplateLib(self):
        return self.templateLib

    class scenario_return(ParserRuleReturnScope):
        def __init__(self):
            super().__init__()

            self.st = None

        def getTemplate(self):
            return self.st

        def toString(self):
            if self.st is not None:
                return self.st.toString()
            return None

        __str__ = toString

    # $ANTLR start "scenario"
    # .\\yarc\\yarc\\grammar\\YarcParser.g:20:1: scenario[handler_kwargs] : ( NEWLINE )* declaration[$handler_kwargs] (before+= code_snippet | NEWLINE )* ( settings )? stage ( writers )? after+= ( code_snippet )* EOF -> scenario(name=$declaration.scenario_namebefore_snippets=$beforesettings=$settings.ststage=$stage.stwriters=$writers.stafter_snippets=$after);
    def scenario(self, handler_kwargs):
        retval = self.scenario_return()
        retval.start = self.input.LT(1)

        after = None
        list_after = None
        list_before = None
        declaration1 = None
        settings2 = None
        stage3 = None
        writers4 = None
        before = None
        try:
            try:
                # .\\yarc\\yarc\\grammar\\YarcParser.g:22:3: ( ( NEWLINE )* declaration[$handler_kwargs] (before+= code_snippet | NEWLINE )* ( settings )? stage ( writers )? after+= ( code_snippet )* EOF -> scenario(name=$declaration.scenario_namebefore_snippets=$beforesettings=$settings.ststage=$stage.stwriters=$writers.stafter_snippets=$after))
                # .\\yarc\\yarc\\grammar\\YarcParser.g:22:5: ( NEWLINE )* declaration[$handler_kwargs] (before+= code_snippet | NEWLINE )* ( settings )? stage ( writers )? after+= ( code_snippet )* EOF
                pass
                # .\\yarc\\yarc\\grammar\\YarcParser.g:22:5: ( NEWLINE )*
                while True:  # loop1
                    alt1 = 2
                    LA1_0 = self.input.LA(1)

                    if LA1_0 == NEWLINE:
                        alt1 = 1

                    if alt1 == 1:
                        # .\\yarc\\yarc\\grammar\\YarcParser.g:22:5: NEWLINE
                        self.match(
                            self.input, NEWLINE, self.FOLLOW_NEWLINE_in_scenario67
                        )

                    else:
                        break  # loop1

                self._state.following.append(self.FOLLOW_declaration_in_scenario70)
                declaration1 = self.declaration(handler_kwargs)

                self._state.following.pop()

                # .\\yarc\\yarc\\grammar\\YarcParser.g:22:43: (before+= code_snippet | NEWLINE )*
                while True:  # loop2
                    alt2 = 3
                    LA2_0 = self.input.LA(1)

                    if LA2_0 == SNIPPET:
                        alt2 = 1
                    elif LA2_0 == NEWLINE:
                        alt2 = 2

                    if alt2 == 1:
                        # .\\yarc\\yarc\\grammar\\YarcParser.g:22:44: before+= code_snippet
                        self._state.following.append(
                            self.FOLLOW_code_snippet_in_scenario76
                        )
                        before = self.code_snippet()

                        self._state.following.pop()
                        if list_before is None:
                            list_before = []
                        list_before.append(before.st)

                    elif alt2 == 2:
                        # .\\yarc\\yarc\\grammar\\YarcParser.g:22:67: NEWLINE
                        self.match(
                            self.input, NEWLINE, self.FOLLOW_NEWLINE_in_scenario80
                        )

                    else:
                        break  # loop2

                # .\\yarc\\yarc\\grammar\\YarcParser.g:22:77: ( settings )?
                alt3 = 2
                LA3_0 = self.input.LA(1)

                if LA3_0 == SETTINGS:
                    alt3 = 1
                if alt3 == 1:
                    # .\\yarc\\yarc\\grammar\\YarcParser.g:22:77: settings
                    self._state.following.append(self.FOLLOW_settings_in_scenario84)
                    settings2 = self.settings()

                    self._state.following.pop()

                self._state.following.append(self.FOLLOW_stage_in_scenario87)
                stage3 = self.stage()

                self._state.following.pop()

                # .\\yarc\\yarc\\grammar\\YarcParser.g:22:93: ( writers )?
                alt4 = 2
                LA4_0 = self.input.LA(1)

                if LA4_0 == WRITERS:
                    alt4 = 1
                if alt4 == 1:
                    # .\\yarc\\yarc\\grammar\\YarcParser.g:22:93: writers
                    self._state.following.append(self.FOLLOW_writers_in_scenario89)
                    writers4 = self.writers()

                    self._state.following.pop()

                # .\\yarc\\yarc\\grammar\\YarcParser.g:22:109: ( code_snippet )*
                while True:  # loop5
                    alt5 = 2
                    LA5_0 = self.input.LA(1)

                    if LA5_0 == SNIPPET:
                        alt5 = 1

                    if alt5 == 1:
                        # .\\yarc\\yarc\\grammar\\YarcParser.g:22:110: code_snippet
                        self._state.following.append(
                            self.FOLLOW_code_snippet_in_scenario95
                        )
                        after = self.code_snippet()

                        self._state.following.pop()
                        if list_after is None:
                            list_after = []
                        list_after.append(after.st)

                    else:
                        break  # loop5

                self.match(self.input, EOF, self.FOLLOW_EOF_in_scenario99)

                # TEMPLATE REWRITE
                # 23:3: -> scenario(name=$declaration.scenario_namebefore_snippets=$beforesettings=$settings.ststage=$stage.stwriters=$writers.stafter_snippets=$after)
                retval.st = self.templateLib.getInstanceOf(
                    "scenario",
                    attributes={
                        "name": (
                            (declaration1 is not None)
                            and [declaration1.scenario_name]
                            or [None]
                        )[0],
                        "before_snippets": list_before,
                        "settings": (
                            (settings2 is not None) and [settings2.st] or [None]
                        )[0],
                        "stage": ((stage3 is not None) and [stage3.st] or [None])[0],
                        "writers": ((writers4 is not None) and [writers4.st] or [None])[
                            0
                        ],
                        "after_snippets": list_after,
                    },
                )

                retval.stop = self.input.LT(-1)

                # action start
                self.handler.pop_stack()
                # action end

            except RecognitionException as re:
                self.reportError(re)
                self.recover(self.input, re)

        finally:
            pass
        return retval

    # $ANTLR end "scenario"

    class code_snippet_return(ParserRuleReturnScope):
        def __init__(self):
            super().__init__()

            self.st = None

        def getTemplate(self):
            return self.st

        def toString(self):
            if self.st is not None:
                return self.st.toString()
            return None

        __str__ = toString

    # $ANTLR start "code_snippet"
    # .\\yarc\\yarc\\grammar\\YarcParser.g:30:1: code_snippet : SNIPPET -> snippet(code=code);
    def code_snippet(
        self,
    ):
        retval = self.code_snippet_return()
        retval.start = self.input.LT(1)

        SNIPPET5 = None

        try:
            try:
                # .\\yarc\\yarc\\grammar\\YarcParser.g:30:14: ( SNIPPET -> snippet(code=code))
                # .\\yarc\\yarc\\grammar\\YarcParser.g:30:16: SNIPPET
                SNIPPET5 = self.match(
                    self.input, SNIPPET, self.FOLLOW_SNIPPET_in_code_snippet218
                )

                # action start
                code = self.handler.parse_snippet(SNIPPET5)
                # action end

                # TEMPLATE REWRITE
                # 30:68: -> snippet(code=code)
                retval.st = self.templateLib.getInstanceOf(
                    "snippet", attributes={"code": code}
                )

                retval.stop = self.input.LT(-1)

            except RecognitionException as re:
                self.reportError(re)
                self.recover(self.input, re)

        finally:
            pass
        return retval

    # $ANTLR end "code_snippet"

    class declaration_return(ParserRuleReturnScope):
        def __init__(self):
            super().__init__()

            self.scenario_name = None
            self.st = None

        def getTemplate(self):
            return self.st

        def toString(self):
            if self.st is not None:
                return self.st.toString()
            return None

        __str__ = toString

    # $ANTLR start "declaration"
    # .\\yarc\\yarc\\grammar\\YarcParser.g:32:1: declaration[handler_kwargs] returns [scenario_name] : SCENARIO ID ( COLON name )? NEWLINE ;
    def declaration(self, handler_kwargs):
        retval = self.declaration_return()
        retval.start = self.input.LT(1)

        ID6 = None
        name7 = None

        try:
            try:
                # .\\yarc\\yarc\\grammar\\YarcParser.g:32:53: ( SCENARIO ID ( COLON name )? NEWLINE )
                # .\\yarc\\yarc\\grammar\\YarcParser.g:32:55: SCENARIO ID ( COLON name )? NEWLINE
                self.match(self.input, SCENARIO, self.FOLLOW_SCENARIO_in_declaration242)

                ID6 = self.match(self.input, ID, self.FOLLOW_ID_in_declaration244)

                # .\\yarc\\yarc\\grammar\\YarcParser.g:32:67: ( COLON name )?
                alt6 = 2
                LA6_0 = self.input.LA(1)

                if LA6_0 == COLON:
                    alt6 = 1
                if alt6 == 1:
                    # .\\yarc\\yarc\\grammar\\YarcParser.g:32:68: COLON name
                    self.match(self.input, COLON, self.FOLLOW_COLON_in_declaration247)

                    self._state.following.append(self.FOLLOW_name_in_declaration249)
                    name7 = self.name()

                    self._state.following.pop()

                self.match(self.input, NEWLINE, self.FOLLOW_NEWLINE_in_declaration253)

                # action start
                retval.scenario_name = ID6.text
                # action end

                # action start
                self.set_handler(
                    (
                        (name7 is not None)
                        and [self.input.toString(name7.start, name7.stop)]
                        or [None]
                    )[0],
                    handler_kwargs,
                )
                # action end

                retval.stop = self.input.LT(-1)

            except RecognitionException as re:
                self.reportError(re)
                self.recover(self.input, re)

        finally:
            pass
        return retval

    # $ANTLR end "declaration"

    class settings_return(ParserRuleReturnScope):
        def __init__(self):
            super().__init__()

            self.st = None

        def getTemplate(self):
            return self.st

        def toString(self):
            if self.st is not None:
                return self.st.toString()
            return None

        __str__ = toString

    # $ANTLR start "settings"
    # .\\yarc\\yarc\\grammar\\YarcParser.g:36:1: settings : SETTINGS COLON NEWLINE INDENT stmts_+= ( setting | code_snippet )+ DEDENT -> settings(settings=self.handler.settings_to_str()stmts=$stmts_);
    def settings(
        self,
    ):
        retval = self.settings_return()
        retval.start = self.input.LT(1)

        stmts_ = None
        list_stmts_ = None

        self.handler.push_stack()
        try:
            try:
                # .\\yarc\\yarc\\grammar\\YarcParser.g:39:3: ( SETTINGS COLON NEWLINE INDENT stmts_+= ( setting | code_snippet )+ DEDENT -> settings(settings=self.handler.settings_to_str()stmts=$stmts_))
                # .\\yarc\\yarc\\grammar\\YarcParser.g:39:5: SETTINGS COLON NEWLINE INDENT stmts_+= ( setting | code_snippet )+ DEDENT
                self.match(self.input, SETTINGS, self.FOLLOW_SETTINGS_in_settings289)

                self.match(self.input, COLON, self.FOLLOW_COLON_in_settings291)

                self.match(self.input, NEWLINE, self.FOLLOW_NEWLINE_in_settings293)

                self.match(self.input, INDENT, self.FOLLOW_INDENT_in_settings295)

                # .\\yarc\\yarc\\grammar\\YarcParser.g:39:43: ( setting | code_snippet )+
                cnt7 = 0
                while True:  # loop7
                    alt7 = 3
                    LA7_0 = self.input.LA(1)

                    if LA7_0 == ID:
                        alt7 = 1
                    elif LA7_0 == SNIPPET:
                        alt7 = 2

                    if alt7 == 1:
                        # .\\yarc\\yarc\\grammar\\YarcParser.g:39:44: setting
                        self._state.following.append(self.FOLLOW_setting_in_settings300)
                        stmts_ = self.setting()

                        self._state.following.pop()
                        if list_stmts_ is None:
                            list_stmts_ = []
                        list_stmts_.append(stmts_.st)

                    elif alt7 == 2:
                        # .\\yarc\\yarc\\grammar\\YarcParser.g:39:54: code_snippet
                        self._state.following.append(
                            self.FOLLOW_code_snippet_in_settings304
                        )
                        stmts_ = self.code_snippet()

                        self._state.following.pop()
                        if list_stmts_ is None:
                            list_stmts_ = []
                        list_stmts_.append(stmts_.st)

                    else:
                        if cnt7 >= 1:
                            break  # loop7

                        eee = EarlyExitException(7, self.input)
                        raise eee

                    cnt7 += 1

                self.match(self.input, DEDENT, self.FOLLOW_DEDENT_in_settings308)

                # TEMPLATE REWRITE
                # 39:76: -> settings(settings=self.handler.settings_to_str()stmts=$stmts_)
                retval.st = self.templateLib.getInstanceOf(
                    "settings",
                    attributes={
                        "settings": self.handler.settings_to_str(),
                        "stmts": list_stmts_,
                    },
                )

                retval.stop = self.input.LT(-1)

                # action start
                self.handler.pop_stack()
                # action end

            except RecognitionException as re:
                self.reportError(re)
                self.recover(self.input, re)

        finally:
            pass
        return retval

    # $ANTLR end "settings"

    class setting_return(ParserRuleReturnScope):
        def __init__(self):
            super().__init__()

            self.st = None

        def getTemplate(self):
            return self.st

        def toString(self):
            if self.st is not None:
                return self.st.toString()
            return None

        __str__ = toString

    # $ANTLR start "setting"
    # .\\yarc\\yarc\\grammar\\YarcParser.g:40:1: setting : ID ASSIGN test NEWLINE ({...}?|{...}? -> {self.handler.special_setting_to_str($ID, $test.st)}| -> setting(setting=$ID.textvalue=$test.st)) ;
    def setting(
        self,
    ):
        retval = self.setting_return()
        retval.start = self.input.LT(1)

        ID8 = None
        test9 = None

        try:
            try:
                # .\\yarc\\yarc\\grammar\\YarcParser.g:40:16: ( ID ASSIGN test NEWLINE ({...}?|{...}? -> {self.handler.special_setting_to_str($ID, $test.st)}| -> setting(setting=$ID.textvalue=$test.st)) )
                # .\\yarc\\yarc\\grammar\\YarcParser.g:40:18: ID ASSIGN test NEWLINE ({...}?|{...}? -> {self.handler.special_setting_to_str($ID, $test.st)}| -> setting(setting=$ID.textvalue=$test.st))
                ID8 = self.match(self.input, ID, self.FOLLOW_ID_in_setting336)

                self.match(self.input, ASSIGN, self.FOLLOW_ASSIGN_in_setting338)

                self._state.following.append(self.FOLLOW_test_in_setting340)
                test9 = self.test()

                self._state.following.pop()

                self.match(self.input, NEWLINE, self.FOLLOW_NEWLINE_in_setting342)

                # .\\yarc\\yarc\\grammar\\YarcParser.g:40:41: ({...}?|{...}? -> {self.handler.special_setting_to_str($ID, $test.st)}| -> setting(setting=$ID.textvalue=$test.st))
                alt8 = 3
                LA8 = self.input.LA(1)
                if LA8 in {DEDENT}:
                    LA8_1 = self.input.LA(2)

                    if self.handler.is_overwritten(ID8):
                        alt8 = 1
                    elif self.handler.is_special_setting(ID8):
                        alt8 = 2
                    elif True:
                        alt8 = 3
                    else:
                        nvae = NoViableAltException("", 8, 1, self.input)

                        raise nvae

                elif LA8 in {ID}:
                    LA8_2 = self.input.LA(2)

                    if self.handler.is_overwritten(ID8):
                        alt8 = 1
                    elif self.handler.is_special_setting(ID8):
                        alt8 = 2
                    elif True:
                        alt8 = 3
                    else:
                        nvae = NoViableAltException("", 8, 2, self.input)

                        raise nvae

                elif LA8 in {SNIPPET}:
                    LA8_3 = self.input.LA(2)

                    if self.handler.is_overwritten(ID8):
                        alt8 = 1
                    elif self.handler.is_special_setting(ID8):
                        alt8 = 2
                    elif True:
                        alt8 = 3
                    else:
                        nvae = NoViableAltException("", 8, 3, self.input)

                        raise nvae

                else:
                    nvae = NoViableAltException("", 8, 0, self.input)

                    raise nvae

                if alt8 == 1:
                    # .\\yarc\\yarc\\grammar\\YarcParser.g:40:43: {...}?
                    if not (self.handler.is_overwritten(ID8)):
                        raise FailedPredicateException(
                            self.input, "setting", "self.handler.is_overwritten($ID)"
                        )

                elif alt8 == 2:
                    # .\\yarc\\yarc\\grammar\\YarcParser.g:41:43: {...}?
                    if not (self.handler.is_special_setting(ID8)):
                        raise FailedPredicateException(
                            self.input,
                            "setting",
                            "self.handler.is_special_setting($ID)",
                        )

                    # TEMPLATE REWRITE
                    # 41:83: -> {self.handler.special_setting_to_str($ID, $test.st)}
                    retval.st = self.handler.special_setting_to_str(
                        ID8, ((test9 is not None) and [test9.st] or [None])[0]
                    )

                elif alt8 == 3:
                    # .\\yarc\\yarc\\grammar\\YarcParser.g:42:43:
                    pass
                    # TEMPLATE REWRITE
                    # 42:43: -> setting(setting=$ID.textvalue=$test.st)
                    retval.st = self.templateLib.getInstanceOf(
                        "setting",
                        attributes={
                            "setting": ID8.text,
                            "value": ((test9 is not None) and [test9.st] or [None])[0],
                        },
                    )

                # action start
                self.handler.add_setting(
                    setting=ID8, value=((test9 is not None) and [test9.st] or [None])[0]
                )
                # action end

                retval.stop = self.input.LT(-1)

            except RecognitionException as re:
                self.reportError(re)
                self.recover(self.input, re)

        finally:
            pass
        return retval

    # $ANTLR end "setting"

    class writers_return(ParserRuleReturnScope):
        def __init__(self):
            super().__init__()

            self.st = None

        def getTemplate(self):
            return self.st

        def toString(self):
            if self.st is not None:
                return self.st.toString()
            return None

        __str__ = toString

    # $ANTLR start "writers"
    # .\\yarc\\yarc\\grammar\\YarcParser.g:45:1: writers : WRITERS COLON NEWLINE INDENT stmts_+= ( expr_stmt | code_snippet | writer )+ DEDENT -> writers(stmts=$stmts_);
    def writers(
        self,
    ):
        retval = self.writers_return()
        retval.start = self.input.LT(1)

        stmts_ = None
        list_stmts_ = None
